# slp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  deny.toml  panschema-publish.toml  panschema.toml  theoria-e2e.toml  theoria.toml
.cargo/: mutants.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  pages.yml  release.yml  security.yml  test.yml
crates/dokime/: Cargo.toml
crates/dokime/docs/: PLAN.md
crates/dokime/docs/stories/: D1-render-and-assert.md  README.md
crates/dokime/src/: lib.rs
crates/slp-app/: Cargo.toml  Trunk.toml  index.html
crates/slp-app/src/: app.rs  main.rs
crates/slp-core/: Cargo.toml
crates/slp-core/src/: arc.rs  bezier.rs  boundary.rs  catalog.rs  clearance.rs  corner.rs  dist.rs  geom.rs  lib.rs  pick.rs  place.rs  plan_io.rs  snap.rs  takeoff.rs  wall.rs
crates/slp-e2e/: Cargo.toml
crates/slp-e2e/tests/: area_borders.rs  area_composition.rs  area_inspector.rs  bushes.rs  catalog_ingest_key.rs  catalog_inspector.rs  circle_drawing.rs  clearance_ring.rs  deck_drawing.rs  fire_pit_ground_rule.rs  grills_hot_tubs.rs  house_drawing.rs  house_openings.rs  legend.rs  material_swatch.rs  mulch_bed.rs  object_inspector.rs  object_move_delete.rs  object_palette.rs  object_status.rs  outline_editing.rs  paver_area.rs  persistence.rs  placement_modifiers.rs  placement_preview.rs  plan_file.rs  plan_file_fsa.rs  shape_arc_editing.rs  shape_curve_editing.rs  shape_drawing.rs  shape_editing.rs  structure_inspector.rs  surface_tiling.rs  trees.rs  walking_skeleton.rs  yard_dimensions.rs
crates/slp-e2e/tests/common/: mod.rs
crates/slp-ui/: Cargo.toml
crates/slp-ui/src/: api_key.rs  fs_access.rs  lib.rs  plan_file.rs  style.rs  vision.rs
crates/slp-ui/src/components/: area_inspector.rs  area_inspector.stories.rs  area_inspector.tests.rs  border_editor.rs  border_editor.stories.rs  border_editor.tests.rs  catalog_panel.rs  catalog_panel.stories.rs  catalog_panel.tests.rs  catalog_picker.rs  catalog_picker.stories.rs  catalog_picker.tests.rs  circles.rs  circles.stories.rs  circles.tests.rs  course_editor.rs  course_editor.stories.rs  course_editor.tests.rs  crop_editor.rs  crop_editor.stories.rs  crop_editor.tests.rs  deck.rs  deck.stories.rs  deck.tests.rs  door.rs  door.stories.rs  door.tests.rs  estimate_panel.rs  estimate_panel.stories.rs  estimate_panel.tests.rs  file_input.rs  file_input.stories.rs  file_input.tests.rs  furnishings.rs  furnishings.stories.rs  furnishings.tests.rs  grid.rs  grid.stories.rs  grid.tests.rs  house.rs  (+66 more)
crates/theoria/: Cargo.toml
crates/theoria-cli/: Cargo.toml
crates/theoria-cli/src/: main.rs
crates/theoria-e2e/: Cargo.toml
crates/theoria-e2e/tests/: gallery.rs
crates/theoria-macros/: Cargo.toml
crates/theoria-macros/src/: lib.rs
crates/theoria/docs/: PLAN.md
crates/theoria/docs/stories/: README.md  T1-browse-and-preview.md  T8-story-groups.md  T9-serve-cli.md
crates/theoria/src/: lib.rs
crates/theoria/src/components/: controls.rs  controls.stories.rs  controls.tests.rs  gallery.rs  gallery.tests.rs  markdown.rs  markdown.tests.rs  mod.rs  show_code.rs  show_code.stories.rs  show_code.tests.rs  story_nav.rs  story_nav.stories.rs  story_nav.tests.rs
docs/: PLAN.md  mutation-testing.md
docs/stories/: A1-yard-to-scale.md  B1-draw-paver-area.md  B2-area-cost.md  B3-area-composition.md  B4-draw-mulch-beds.md  B5-area-borders.md  D1-trees.md  D2-fire-pit.md  D3-bushes.md  D4-grills.md  D5-hot-tubs.md  E1-place-furniture.md  F1-select-move-delete.md  F2-object-palette.md  F3-draw-edit-shapes.md  G1-save-load-plan.md  H1-draw-house.md  H2-draw-deck.md  M4-M5-material-ingestion.md  README.md
schema/: slp.yaml
scripts/: dev.sh  mutants.sh
supply-chain/: config.toml
