[workspace]
# Native, fast-to-test library crates. slp-ui/theoria are Leptos libs that don't
# hard-enable a runtime; dokime renders them under `ssr` for native component
# tests, so the whole member graph resolves Leptos with the ssr backend.
members = [
    "crates/slp-core",
    "crates/slp-ui",
    "crates/dokime",
    "crates/theoria",
    "crates/theoria-cli",
]
# slp-app is the wasm32 Leptos CSR app (built by Trunk, selects the csr runtime);
# slp-e2e is its native playwright-rust dogfood test. Both are excluded so
# workspace-wide cargo commands stay native/fast and no member enables csr
# (which would conflict with dokime's ssr) — mirrors the playwright-rust
# site / site-e2e split. They build on their own (Trunk + a standalone test).
exclude = ["crates/slp-app", "crates/slp-e2e", "crates/theoria-e2e"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/padamson/slp"
authors = ["Paul Adamson"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }

# Project-wide lint policy (matches the t2t / rust-project-template convention).
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
