# Standalone (excluded from the root workspace): a wasm32 Leptos CSR crate built
# by Trunk. It is the one crate that selects the csr runtime — for slp-ui and
# theoria (which stay runtime-agnostic) via their `csr` passthrough features.
[package]
name = "slp-app"
description = "Simple Landscape Planner — Leptos client-side (CSR/WASM) app"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/padamson/slp"
authors = ["Paul Adamson"]
publish = false

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
slp-ui = { path = "../slp-ui", features = ["csr"] }
console_error_panic_hook = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
