[package]
name = "slp-ui"
description = "Leptos UI components for the Simple Landscape Planner (runtime-agnostic)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# A library must NOT hard-enable a Leptos runtime (csr/ssr/hydrate); the final
# consumer picks one. We expose passthrough features so slp-app can select csr
# and dokime can render under ssr.
leptos = { version = "0.8", default-features = false }
slp-core = { path = "../slp-core" }
serde_json = { workspace = true }
# Only pulled in for the colocated `*.stories.rs` files (the `stories` feature),
# never in the production app build.
theoria = { path = "../theoria", optional = true }
# localStorage autosave of the Plan; pulled in by csr, so ssr/dokime builds
# don't see it.
web-sys = { version = "0.3", optional = true, features = ["Window", "Storage"] }

[dev-dependencies]
dokime = { path = "../dokime" }

[features]
csr = ["leptos/csr", "dep:web-sys"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
# Compiles the colocated `*.stories.rs` files (slp-ui components as theoria
# stories). Enabled by slp-gallery; off in the production slp-app build.
stories = ["dep:theoria"]

[lints]
workspace = true
